# python_notebook

./: .gitignore  pyproject.toml
note_book/: demo_opencv.ipynb  lanchain_conversation_memory.ipynb  langchain_generate_image.ipynb
